# neo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  community_facts.json  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/source-command-prepare-release/: SKILL.md
.claude-plugin/: plugin.json
.claude-plugin/agents/: neo.md
.claude-plugin/commands/: neo-architect.md  neo-debug.md  neo-optimize.md  neo-pattern.md  neo-review.md  neo.md
.claude/commands/: bug-autonomous.md  chore-autonomous.md  classify-issue.md  feature-autonomous.md  fix-ci.md  gh-review-assess.md  implement.md  pr-review.md  prime.md  sync-branch.md
.githooks/: post-commit  pre-commit
.github/: SECURITY.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: learning_loop_v1.json
docs/: LOAD_PROGRAM.md  linus-patterns.md  mistakes.md  patterns.md  tree-sitter-setup.md
docs/architecture/: prompt-enhancement.md
docs/solutions/: async-observer.md  conversation-mined-issues.md  evidence-learning-completion-audit.md  evidence-learning-episodes.md  evidence-learning-evaluation.md  goal-aware-execution-envelope.md  memory-audit.md  operating-modes.md  rule-file-sync.md  tiered-reasoning-multi-agent.md  token-budget-enforcement.md  transcript-ingestion.md
plugins/neo/.codex-plugin/: plugin.json
specs/: bug-fix-46-compositional-strategy-boundary.md  bug-index-freshness-check.md  bug-index-import-error.md  chore-github-actions-ci.md
src/neo/: __init__.py  a2ui.py  adapters.py  agent_context.py  algorithm_design.py  architecture_metrics.py  car_discovery.py  car_host.py  car_inference.py  car_tool_schema.py  cli.py  code_smells.py  config.py  constraint_verification.py  construct.py  context_gatherer.py  engine.py  execution_context.py  exemplar_index.py  input_templates.py  languages.py  lm_logger.py  math_utils.py  models.py  multi_agent.py  operating_mode.py  overseer.py  panel.py  parsers.py  pattern_extraction.py  persistent_reasoning.py  program_loader.py  reasoning_effort.py  reasoning_mode.py  repair_loop.py  self_correction.py  static_analysis.py  storage.py  storage_interface.py  structured_parser.py  (+2 more)
tests/: conftest.py  test_a2ui.py  test_agent_context.py  test_algorithm_design_language.py  test_anthropic_adapter.py  test_architecture_metrics.py  test_attempt_outcome_cap.py  test_car_adapter.py  test_car_discovery.py  test_car_first.py  test_car_host_smoke.py  test_car_tool_schema.py  test_claude_memory.py  test_cli_global_flags.py  test_cli_index_flag.py  test_cli_stdin.py  test_code_smells.py  test_community.py  test_config_keychain.py  test_construct.py  test_context_assembly.py  test_context_gatherer_scoring.py  test_edge_extraction.py  test_engine_reasoning.py  test_execution_context.py  test_fact_models.py  test_fact_store.py  test_failure_learning.py  test_google_adapter.py  test_import_health.py  test_integration.py  test_issues.py  test_json_serialization.py  test_language_parser.py  test_languages.py  test_learning_episodes.py  test_learning_evaluation.py  test_memaudit.py  test_memimport.py  test_memory_explain.py  (+34 more)
tools/: ab_controlled.py  ab_reasoning.py
(+46 files in other folders)
